--- a/2.html
+++ b/2.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+    <p>Cоздать функцию greeting, которая принимает имя и выводит приветствие,
+        используя переданное имя, в консоль.
+        Необходимо у пользователя запросить имя
+        и вызвать функцию greeting, передав туда данное значение.</p>
     <script src="2.js"></script>
 </body>
 
